single and multiple pages

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <body>
 
 <p>
-  <a href='#'>one presentation on page<a>
+  <a href='single.html'>single presentation on page<a>
 </p>
 
 <p>
-  <a href='#'>two presentation on page<a>
+  <a href='multiple.html'>two presentation on page<a>
 </p>
 
 </body>
